# UbiquantSystem

./: .gitignore  .gitmodules  1.txt  CMakeLists.txt  README.md  common.h  main.cpp  parallel.sh  parallel_check.sh  readlogs.cpp  readlogs.h  scp.sh  test11.txt  参考代码.cpp
ans/: check_all_pos.cpp  check_all_twap.cpp
cmake/: Findprio.cmake
report/: 技术报告_提交.md
src/: Str.h  StrHash.h  chuo.cpp  chuo.h  common.cpp  common.h  main.cpp  readlogs.cpp  readlogs.h  writetrade.cpp  writetrade.h
